# Iris

./: .babelrc  .coverage  .eslintrc.json  .gitignore  .htaccess  .jshintrc  .travis.yml  Dockerfile  Dockerfile-develop  Dockerfile.alpine  IRIS_VERSION  MANIFEST.in  README.md  README.rst  VERSION  VERSION.md  auth.php  babel.config.js  build.sh  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  index.html  jest.config.js  mopidy.conf  package-lock.json  package.json  pyproject.toml  release.sh  setup.cfg  setup.py  system.sh  tox.ini  webpack.config.js
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug_report.md  feature-request.yaml  feature_request.md  i-have-a-question.md  question.yaml
.github/workflows/: build-docker.yml  ci.yml  codeql-analysis.yml  jest-tests.yml  python-tests.yml  release.yml
.sass-cache/24e53b713dab4e4c156e91a0e5704e71c891ad1b/: app.scssc
.sass-cache/4319169d23c993973e3a5c727701e766156ddb22/: app.scssc
.sass-cache/74df348bada4787e6f947d6a44aa79eb05edc6ba/: _animated.scssc  _bordered-pulled.scssc  _core.scssc  _fixed-width.scssc  _icons.scssc  _index.scssc  _larger.scssc  _list.scssc  _mixins.scssc  _path.scssc  _rotated-flipped.scssc  _screen-reader.scssc  _stacked.scssc  _variables.scssc
.sass-cache/be47ba961175e549b9ee528c3e55370d5c829e7f/: _animated.scssc  _bordered-pulled.scssc  _core.scssc  _fixed-width.scssc  _icons.scssc  _index.scssc  _larger.scssc  _list.scssc  _mixins.scssc  _path.scssc  _rotated-flipped.scssc  _screen-reader.scssc  _stacked.scssc  _variables.scssc
Mopidy_Iris.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Screenshots/: Untitled Diagram.xml
__tests__/: App.test.js  jest-yaml-transformer.js  state.js  test-wrapper.js  test_extension.py  test_handlers.py
__tests__/__snapshots__/: App.test.js.snap
__tests__/components/: Dater.test.js  GridItem.test.js  Link.test.js
__tests__/util/: format.test.js  helpers.test.js
build_tools/: auth.php  auth_lastfm.php  auth_spotify.php  build.js  release.sh
coverage/: clover.xml  coverage-final.json  lcov.info
docker/: Dockerfile  docker-compose.example.yml  entrypoint.sh  icecast2.example.xml  mopidy.conf  mopidy.example.conf  pulse-client.conf  requirements.txt  snapserver  snapserver copy  snapserver-example.conf  snapserver.conf
docs/: getting-started.md  index.html  index.md
mopidy_iris/: __init__.py  core.py  ext.conf  frontend.py  handlers.py  http.py  mem.py  pusher.py  snapcast.py  snapcast_thread.py  system.py  system.sh  websocket.py
src/: .htaccess  App.js  actions.js  bootstrap.js  index.ejs  index.html  index.js  manifest.json  reducer.js  service-worker.js
tests/: helpers.test.js  setup.js  state.js  test_extension.py  test_handlers.py  test_system.py
(+486 files in other folders)
